{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 50,
  "lineage": "784510a5-e1be-be61-d173-93dbbee799da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Modelo-WebSite",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07414462a31609040",
            "arn": "arn:aws:ec2:us-east-2:405378853534:instance/i-00be7ce50fcc57f4e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00be7ce50fcc57f4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "modelo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0a337a0178519eb15"
              }
            ],
            "primary_network_interface_id": "eni-0a337a0178519eb15",
            "private_dns": "ip-172-16-15-150.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.15.150",
            "public_dns": "ec2-3-139-91-26.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.91.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3ed85b560f48a44",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d70c7504b797efba",
            "tags": {
              "Name": "pt5aluno53_Modelo-Elissandro",
              "Provisioner": "TerraForm"
            },
            "tags_all": {
              "Name": "pt5aluno53_Modelo-Elissandro",
              "Provisioner": "TerraForm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cde05c294e4ecf02"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_network_interface.placa-modelo-vpc",
            "aws_security_group.SG-modelo",
            "aws_subnet.modelo-subrede-publica",
            "aws_vpc.modelo-vpc",
            "data.aws_ami.ubuntu_last"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-modelo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:405378853534:internet-gateway/igw-0f64ab537456112e2",
            "id": "igw-0f64ab537456112e2",
            "owner_id": "405378853534",
            "tags": {
              "Name": "IGW-modelo"
            },
            "tags_all": {
              "Name": "IGW-modelo"
            },
            "vpc_id": "vpc-044cb298b27c97253"
          },
          "dependencies": [
            "aws_vpc.modelo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "placa-modelo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:405378853534:network-interface/eni-0a337a0178519eb15",
            "id": "eni-0a337a0178519eb15",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:71:f4:9f:bc:8c",
            "owner_id": "405378853534",
            "private_dns_name": "ip-172-16-15-150.us-east-2.compute.internal",
            "private_ip": "172.16.15.150",
            "private_ip_list": [
              "172.16.15.150"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.15.150"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0cde05c294e4ecf02"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d70c7504b797efba",
            "tags": {
              "Name": "placa-modelo-vpc"
            },
            "tags_all": {
              "Name": "placa-modelo-vpc"
            }
          },
          "dependencies": [
            "aws_security_group.SG-modelo",
            "aws_subnet.modelo-subrede-publica",
            "aws_vpc.modelo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:405378853534:route-table/rtb-09b0705e58e2f488f",
            "id": "rtb-09b0705e58e2f488f",
            "owner_id": "405378853534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f64ab537456112e2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Routing Table"
            },
            "tags_all": {
              "Name": "Public Routing Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-044cb298b27c97253"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-modelo",
            "aws_vpc.modelo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_RT_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c0af46be7719cf8",
            "route_table_id": "rtb-09b0705e58e2f488f",
            "subnet_id": "subnet-0d70c7504b797efba"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-modelo",
            "aws_route_table.Public_RT",
            "aws_subnet.modelo-subrede-publica",
            "aws_vpc.modelo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-modelo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:405378853534:security-group/sg-0cde05c294e4ecf02",
            "description": "Firewal",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cde05c294e4ecf02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG-modelo",
            "name_prefix": "",
            "owner_id": "405378853534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-modelo"
            },
            "tags_all": {
              "Name": "SG-modelo"
            },
            "timeouts": null,
            "vpc_id": "vpc-044cb298b27c97253"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.modelo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "modelo-subrede-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:405378853534:subnet/subnet-0d70c7504b797efba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.15.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d70c7504b797efba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "405378853534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Modelo Sub-rede pública"
            },
            "tags_all": {
              "Name": "Modelo Sub-rede pública"
            },
            "vpc_id": "vpc-044cb298b27c97253"
          },
          "dependencies": [
            "aws_vpc.modelo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "modelo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:405378853534:vpc/vpc-044cb298b27c97253",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/20",
            "default_network_acl_id": "acl-0589d48712fefc61b",
            "default_route_table_id": "rtb-0778f26f190f2e840",
            "default_security_group_id": "sg-0ee82fdb8585d9866",
            "dhcp_options_id": "dopt-0d24cc94e277ce44d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044cb298b27c97253",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0778f26f190f2e840",
            "owner_id": "405378853534",
            "tags": {
              "Name": "modelo-vpc"
            },
            "tags_all": {
              "Name": "modelo-vpc"
            }
          }
        }
      ]
    }
  ]
}